# django_views_challenges

./: .gitignore  pyproject.toml
django_views_routing_homework/: settings.py  urls.py
django_views_routing_homework/views/level_1/: a_welcome_user.py  c_baned_username.py  e_month_title.py
django_views_routing_homework/views/level_2/: c_product_type.py  d_authorization.py
django_views_routing_homework/views/level_3/: a_user_ip.py  b_validate_user_data.py  c_github_full_name.py  d_file_generation.py
