[tool.poetry]
name = "django-views-challenges"
version = "0.1.0"
description = ""
authors = ["denis sergeevich pekshev <pekshev.ds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"